quick start tutorial done

--- a/examples/quick_start/flow_verse_playground.ipynb
+++ b/examples/quick_start/flow_verse_playground.ipynb
@@ -24,7 +24,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "## Defining Functions Which Reproduce The Steps Of The Quick Start Tutorial"
+    "### Defining Functions Which Reproduce The Steps Of The Quick Start Tutorial (no modifications required)"
    ]
   },
   {
@@ -87,16 +87,8 @@
     "    # ~~~ Instantiate the Flow ~~~\n",
     "    flow_with_interfaces = {\n",
     "        \"flow\": hydra.utils.instantiate(cfg[\"flow\"], _recursive_=False, _convert_=\"partial\"),\n",
-    "        \"input_interface\": (\n",
-    "            None\n",
-    "            if cfg.get(\"input_interface\", None) is None\n",
-    "            else hydra.utils.instantiate(cfg[\"input_interface\"], _recursive_=False)\n",
-    "        ),\n",
-    "        \"output_interface\": (\n",
-    "            None\n",
-    "            if cfg.get(\"output_interface\", None) is None\n",
-    "            else hydra.utils.instantiate(cfg[\"output_interface\"], _recursive_=False)\n",
-    "        ),\n",
+    "        \"input_interface\": None,\n",
+    "        \"output_interface\": None\n",
     "    }\n",
     "    \n",
     "    # ~~~ Run inference ~~~\n",
@@ -117,7 +109,9 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "## Setting you API Information"
+    "### Setting you API Information\n",
+    "\n",
+    "Set your API information here"
    ]
   },
   {
@@ -141,8 +135,21 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "## Pick A Flow and Some Data and Run It!\n",
-    "\n"
+    "### Pick A Flow and Some Data and Run It!\n",
+    "\n",
+    "Set the `flow` and `data` values, then run the cell! Examples for each flow from the FlowVerse are provided in the cell bellow. Uncomment the flow and data you wish to run. Here is the list of flows available for you to run:\n",
+    "\n",
+    "* [ChatFlowModule](https://huggingface.co/aiflows/ChatFlowModule)\n",
+    "\n",
+    "* [ReAct](https://huggingface.co/aiflows/ControllerExecutorFlowModule)\n",
+    "\n",
+    "* [ChatInteractiveFlowModule](https://huggingface.co/aiflows/ChatInteractiveFlowModule)\n",
+    "\n",
+    "* [ChatWithDemonstrationsFlowModule](https://huggingface.co/aiflows/ChatWithDemonstrationsFlowModule)\n",
+    "\n",
+    "* [AutoGPTFlowModule](https://huggingface.co/aiflows/AutoGPTFlowModule)\n",
+    "\n",
+    "* [VisionFlowModule](https://huggingface.co/aiflows/VisionFlowModule)\n"
    ]
   },
   {
@@ -153,30 +160,37 @@
    "source": [
     "logging.set_verbosity_info()\n",
     "\n",
-    "# ~~~~ Pick a flow ~~~~\n",
+    "# ~~~~ Pick a flow and load some data~~~~\n",
+    "\n",
     "# Chose which flow you want to run\n",
     "# Options: ChatFlowModule, ReAct, ChatInteractiveFlowModule,\n",
     "#          ChatWithDemonstrationsFlowModule, AutoGPTFlowModule,\n",
     "#          VisionFlowModule\n",
-    "flow = \"ChatFlowModule\"\n",
     "\n",
-    "# ~~~~ Get the data ! (uncomment the correct line) ~~~~\n",
-    "# Example data for ChatFlowModule\n",
+    "\n",
+    "\n",
+    "# # Example for ChatFlowModule\n",
+    "flow = \"ChatFlowModule\"\n",
     "data = {\"id\": 0, \"question\": \"What is the capital of France?\"} \n",
     "\n",
-    "# # Example data for ReAct (ControllerExecutorFlowModule)\n",
-    "#data = {\"id\": 0, \"goal\": \"What is the capital of France?\"}\n",
+    "# # Example for ReAct (ControllerExecutorFlowModule)\n",
+    "# flow = \"ReAct\"\n",
+    "# data = {\"id\": 0, \"goal\": \"What is the capital of France?\"}\n",
     "\n",
-    "# # Example data for ChatInteractiveFlowModule\n",
+    "# # Example for ChatInteractiveFlowModule\n",
+    "# flow = \"ChatInteractiveFlowModule\"\n",
     "# data = {\"id\": 0} # you will be able to ask questions once it is running\n",
     "\n",
-    "# # Example data for ChatWithDemonstrationsFlowModule\n",
-    "#data = {\"id\": 0, \"question\": \"What's the capital of France?\"}  # This can be a list of samples\n",
+    "# # Example for ChatWithDemonstrationsFlowModule\n",
+    "# flow = \"ChatWithDemonstrationsFlowModule\"\n",
+    "# data = {\"id\": 0, \"question\": \"What's the capital of France?\"}  # This can be a list of samples\n",
     "\n",
-    "# #example data for AutoGPTFlowModule\n",
-    "#data = {\"id\": 0, \"goal\": \"Answer the following question: What is the profession and date of birth of Michael Jordan?\"}\n",
+    "# # Example for AutoGPTFlowModule\n",
+    "# flow = \"AutoGPTFlowModule\"\n",
+    "# data = {\"id\": 0, \"goal\": \"Answer the following question: What is the profession and date of birth of Michael Jordan?\"}\n",
     "\n",
-    "# #example data for VisionFlowModule\n",
+    "# example data for VisionFlowModule\n",
+    "# flow = \"VisionFlowModule\"\n",
     "# url_image = {\"type\": \"url\",\n",
     "#             \"image\": \"https://upload.wikimedia.org/wikipedia/commons/thumb/d/dd/Gfp-wisconsin-madison-the-nature-boardwalk.jpg/2560px-Gfp-wisconsin-madison-the-nature-boardwalk.jpg\"}\n",
     "\n",
