Add instant server to notebooks - notebooks are now self-sufficient.

--- a/examples/coflows/ogReverseNumberNotebook.ipynb
+++ b/examples/coflows/ogReverseNumberNotebook.ipynb
@@ -1,6 +1,14 @@
 {
  "cells": [
   {
+   "cell_type": "markdown",
+   "id": "fc78df95-3264-4711-9184-5ba7219eb90a",
+   "metadata": {},
+   "source": [
+    "# ReverseNumberFlow example"
+   ]
+  },
+  {
    "cell_type": "code",
    "execution_count": 1,
    "id": "f086a301-03bc-49f2-b6aa-1aff9862ae8d",
@@ -20,6 +28,8 @@
    "source": [
     "import os, json\n",
     "\n",
+    "from colink import CoLink\n",
+    "\n",
     "from aiflows.utils import serve_utils\n",
     "from aiflows.utils.general_helpers import read_yaml_file\n",
     "from aiflows.messages import FlowMessage\n",
@@ -34,11 +44,7 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "FLOW_MODULES_PATH = \"./\"\n",
-    "HOST_JWT_PATH = \"/home/staverm/workspace/coflows-dev/colink-server-dev/host_token.txt\"\n",
-    "core_jwt = open(HOST_JWT_PATH).readline().strip()\n",
-    "USER_JWT_PATH = \"/home/staverm/workspace/coflows-dev/coflows/jwts.txt\"\n",
-    "user_jwt = open(USER_JWT_PATH).readline().strip()"
+    "FLOW_MODULES_PATH = \"./\""
    ]
   },
   {
@@ -46,54 +52,31 @@
    "id": "2317f744-65a0-4930-adc7-0b1a0cb2e28f",
    "metadata": {},
    "source": [
-    "# Connect to CoLink server"
+    "# Connect to CoLink server\n",
+    "\n",
+    "To connect to a real server, run below cell instead of the one after."
    ]
   },
   {
    "cell_type": "code",
    "execution_count": 4,
-   "id": "1200b946-d192-4fe2-a72d-c2de2c4e2c9a",
+   "id": "d61f73de-50c0-4621-90bc-12aa7a302441",
    "metadata": {},
    "outputs": [],
    "source": [
-    "args = {\n",
-    "    \"addr\": \"http://127.0.0.1:2021\",\n",
-    "    \"jwt\": user_jwt,\n",
-    "}"
+    "#USER_JWT_PATH = \"/home/staverm/workspace/coflows-dev/coflows/jwts.txt\"\n",
+    "#user_jwt = open(USER_JWT_PATH).readline().strip()\n",
+    "#cl = CoLink(\"http://127.0.0.1:2021\", user_jwt)"
    ]
   },
   {
    "cell_type": "code",
    "execution_count": 5,
-   "id": "0b1c64a9-c0c2-4d51-8750-a85be8e95c0c",
+   "id": "e692a432-56b5-4040-8971-6f6246ab60e5",
    "metadata": {},
-   "outputs": [
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "\n",
-      "         _    ________\n",
-      "  ____ _(_)  / ____/ /___ _      _______\n",
-      " / __ `/ /  / /_  / / __ \\ | /| / / ___/\n",
-      "/ /_/ / /  / __/ / / /_/ / |/ |/ (__  )\n",
-      "\\__,_/_/  /_/   /_/\\____/|__/|__/____/\n",
-      "Reverse Number Demo\n",
-      "\n",
-      "{\n",
-      "    \"addr\": \"http://127.0.0.1:2021\",\n",
-      "    \"jwt\": \"eyJ0eXAiOiJKV1QiLCJhbGciOiJIUzI1NiJ9.eyJwcml2aWxlZ2UiOiJ1c2VyIiwidXNlcl9pZCI6IjAzODZjOTg3YzA5MTE3NGFkMjhiNjdhOGZmYzUyODQ5ZDQ5Y2ZmNDQ4NjE4ZDhhMWU0N2YzMzZmYWFiMzlmOTM1MSIsImV4cCI6MTcxMjIyMDU0OH0.Ol1HVqq8KfDWAQhxHkAqM-IYR9360pjYTJsC03XL2Ls\"\n",
-      "}\n",
-      "\n",
-      "\n",
-      "Connecting to colink server...\n",
-      "Connected to http://127.0.0.1:2021 as user 0386c987c091174ad28b67a8ffc52849d49cff448618d8a1e47f336faab39f9351\n",
-      "\n"
-     ]
-    }
-   ],
+   "outputs": [],
    "source": [
-    "cl = serve_utils.start_colink_component(\"Reverse Number Demo\", args)"
+    "cl = coflows_utils.start_colink_server()"
    ]
   },
   {
@@ -141,13 +124,8 @@
     }
    ],
    "source": [
-    "reverse_number_atomic_default_config_path = os.path.join(\n",
-    "    FLOW_MODULES_PATH, \"ReverseNumberFlowModule/ReverseNumberAtomicFlow.yaml\"\n",
-    ")\n",
     "reverse_number_atomic_default_config = read_yaml_file(\n",
-    "    reverse_number_atomic_default_config_path\n",
-    ")\n",
-    "    \n",
+    "    os.path.join(FLOW_MODULES_PATH, \"ReverseNumberFlowModule/ReverseNumberAtomicFlow.yaml\"))\n",
     "print(json.dumps(reverse_number_atomic_default_config, indent=4))"
    ]
   },
@@ -204,12 +182,8 @@
     }
    ],
    "source": [
-    "reverse_number_sequential_default_config_path = os.path.join(\n",
-    "    FLOW_MODULES_PATH, \"ReverseNumberFlowModule/ReverseNumberSequentialFlow.yaml\"\n",
-    ")\n",
     "reverse_number_sequential_default_config = read_yaml_file(\n",
-    "    reverse_number_sequential_default_config_path\n",
-    ")\n",
+    "    os.path.join(FLOW_MODULES_PATH, \"ReverseNumberFlowModule/ReverseNumberSequentialFlow.yaml\"))\n",
     "print(json.dumps(reverse_number_sequential_default_config, indent=4))"
    ]
   },
@@ -224,26 +198,7 @@
   {
    "cell_type": "code",
    "execution_count": 8,
-   "id": "d4ccfa96-caac-4e01-91ba-b18eb2ba71dd",
-   "metadata": {},
-   "outputs": [
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "{}\n"
-     ]
-    }
-   ],
-   "source": [
-    "served_flows_info = coflows_utils.served_flows_info(cl)\n",
-    "print(json.dumps(served_flows_info, indent=4))"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 9,
-   "id": "f77da4d2-70cd-429f-aa55-c9892b0320de",
+   "id": "ad2fed22-36cb-4f68-a484-99d242dffb33",
    "metadata": {},
    "outputs": [
     {
@@ -260,7 +215,7 @@
        "True"
       ]
      },
-     "execution_count": 9,
+     "execution_count": 8,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -279,20 +234,7 @@
     "    default_config=reverse_number_sequential_default_config,\n",
     "    default_state=None,\n",
     "    default_dispatch_point=\"coflows_dispatch\",\n",
-    ")"
-   ]
-  },
-  {
-   "cell_type": "raw",
-   "id": "f8abb708-f474-4a63-bf7c-ea0af0c96877",
-   "metadata": {},
-   "source": [
-    "serve_utils.recursive_serve_flow(\n",
-    "    cl=cl,\n",
-    "    flow_type=\"ReverseNumberSequentialFlow_served\",\n",
-    "    default_config=reverse_number_sequential_default_config,\n",
-    "    default_state=None,\n",
-    "    default_dispatch_point=\"coflows_dispatch\",\n",
+    "    # serve_mode=\"statefull\" \"stateless\" \"singleton\"\n",
     ")"
    ]
   },
@@ -306,7 +248,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 10,
+   "execution_count": 9,
    "id": "a179235b-71c4-40d7-a7ca-73cda0ff77ff",
    "metadata": {},
    "outputs": [
@@ -316,17 +258,13 @@
      "text": [
       "Dispatch worker started in attached thread.\n",
       "\n",
-      "Dispatch worker Task:{\n",
-      "    \"flow_id\": \"80b68ab2-f4d4-4a64-b9c9-51df8d733131\",\n",
-      "    \"message_ids\": [\n",
-      "        \"3c379f41-6bf6-4c6d-9a2e-303e996382d3\"\n",
-      "    ]\n",
-      "}\n",
+      "~~~ Dispatch task ~~~\n",
       "flow_type: ReverseNumberSequentialFlow_served\n",
-      "flow_id:80b68ab2-f4d4-4a64-b9c9-51df8d733131\n",
+      "flow_id: 750745d8-6df4-45b5-88c9-e8276fc56bf5\n",
+      "message_ids: ['4e2fd72f-e5fe-407e-b76c-dcd543c6395c']\n",
       "\n",
-      "Called ReverseNumberSequential \n",
-      " state {}\n"
+      "Called ReverseNumberSequential\n",
+      "\n"
      ]
     }
    ],
@@ -336,7 +274,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 11,
+   "execution_count": 10,
    "id": "3d1a46cb-e4b5-434d-b718-f6338b713d16",
    "metadata": {},
    "outputs": [
@@ -346,29 +284,21 @@
      "text": [
       "Dispatch worker started in attached thread.\n",
       "\n",
-      "Dispatch worker Task:{\n",
-      "    \"flow_id\": \"f966b06d-df20-4edc-8e5e-20c640597eda\",\n",
-      "    \"message_ids\": [\n",
-      "        \"a309ab72-0823-4543-b7e4-d4e551612d19\"\n",
-      "    ]\n",
-      "}\n",
+      "~~~ Dispatch task ~~~\n",
       "flow_type: ReverseNumberAtomicFlow_served\n",
-      "flow_id:f966b06d-df20-4edc-8e5e-20c640597eda\n",
+      "flow_id: fd50460f-d6b5-403c-b454-5a16e608d055\n",
+      "message_ids: ['d70bd97e-ecbe-4edf-9f83-56e2b54be205']\n",
       "\n",
-      "Called ReverseNumberAtomic \n",
-      " state {}\n",
+      "Called ReverseNumberAtomic\n",
       "\n",
-      "Dispatch worker Task:{\n",
-      "    \"flow_id\": \"d3262a13-4841-404d-be1f-c4be5779913d\",\n",
-      "    \"message_ids\": [\n",
-      "        \"7e49679c-8937-4bbf-b453-3fe91126729d\"\n",
-      "    ]\n",
-      "}\n",
+      "\n",
+      "~~~ Dispatch task ~~~\n",
       "flow_type: ReverseNumberAtomicFlow_served\n",
-      "flow_id:d3262a13-4841-404d-be1f-c4be5779913d\n",
+      "flow_id: 8f0411b8-eaed-4d11-9b80-fb90d012a2df\n",
+      "message_ids: ['b24b0de0-0340-4603-a537-4d8fac28c9ea']\n",
       "\n",
-      "Called ReverseNumberAtomic \n",
-      " state {}\n"
+      "Called ReverseNumberAtomic\n",
+      "\n"
      ]
     }
    ],
@@ -386,20 +316,18 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "Mounted f966b06d-df20-4edc-8e5e-20c640597eda at flows:ReverseNumberAtomicFlow_served:mounts:local:f966b06d-df20-4edc-8e5e-20c640597eda\n",
-      "Mounted d3262a13-4841-404d-be1f-c4be5779913d at flows:ReverseNumberAtomicFlow_served:mounts:local:d3262a13-4841-404d-be1f-c4be5779913d\n",
-      "Mounted 80b68ab2-f4d4-4a64-b9c9-51df8d733131 at flows:ReverseNumberSequentialFlow_served:mounts:local:80b68ab2-f4d4-4a64-b9c9-51df8d733131\n"
+      "Mounted fd50460f-d6b5-403c-b454-5a16e608d055 at flows:ReverseNumberAtomicFlow_served:mounts:local:fd50460f-d6b5-403c-b454-5a16e608d055\n",
+      "Mounted 8f0411b8-eaed-4d11-9b80-fb90d012a2df at flows:ReverseNumberAtomicFlow_served:mounts:local:8f0411b8-eaed-4d11-9b80-fb90d012a2df\n",
+      "Mounted 750745d8-6df4-45b5-88c9-e8276fc56bf5 at flows:ReverseNumberSequentialFlow_served:mounts:local:750745d8-6df4-45b5-88c9-e8276fc56bf5\n"
      ]
     }
    ],
    "source": [
-    "# ~~~ Mount ReverseNumberSequential --> will recursively mount two ReverseNumberAtomic flows ~~~\n",
-    "config_overrides = None\n",
-    "proxy_flow = serve_utils.recursive_mount(\n",
+    "flow = serve_utils.recursive_mount(\n",
     "    cl=cl,\n",
     "    client_id=\"local\",\n",
     "    flow_type=\"ReverseNumberSequentialFlow_served\",\n",
-    "    config_overrides=config_overrides,\n",
+    "    config_overrides=None,\n",
     "    initial_state=None,\n",
     "    dispatch_point_override=None,\n",
     ")"
@@ -422,24 +350,33 @@
       "Description: Proxy of ReverseNumberSequentialFlow_served\n",
       "Input keys: no input keys\n",
       "Output keys: no output keys\n",
-      "\n",
-      "{'output_number': 1234}\n"
+      "\n"
      ]
+    },
+    {
+     "data": {
+      "text/plain": [
+       "{'output_number': 81}"
+      ]
+     },
+     "execution_count": 13,
+     "metadata": {},
+     "output_type": "execute_result"
     }
    ],
    "source": [
-    "print(\"Pushing to...\\n\", proxy_flow)\n",
+    "print(\"Pushing to...\\n\", flow)\n",
     "  \n",
-    "input_data = {\"id\": 0, \"number\": 1234}\n",
+    "input_data = {\"id\": 0, \"number\": 81}\n",
     "    \n",
     "input_message = FlowMessage(\n",
-    "    data= input_data,\n",
+    "    data=input_data,\n",
     "    src_flow=\"Coflows team\",\n",
-    "    dst_flow=proxy_flow,\n",
-    "    is_input_msg=True\n",
+    "    dst_flow=flow,\n",
+    "    is_input_msg=True,\n",
     ")\n",
-    "    \n",
-    "print(proxy_flow.ask(input_message).get_data())"
+    "\n",
+    "flow.ask(input_message).get_data()"
    ]
   }
  ],
