Add more serve and instance utils - handle single unserving/unmounting.

--- a/examples/coflows/ogReverseNumberNotebook.ipynb
+++ b/examples/coflows/ogReverseNumberNotebook.ipynb
@@ -33,7 +33,7 @@
     "from aiflows.utils import serve_utils\n",
     "from aiflows.utils.general_helpers import read_yaml_file\n",
     "from aiflows.messages import FlowMessage\n",
-    "from aiflows.utils import coflows_utils\n",
+    "from aiflows.utils import coflows_utils, colink_utils\n",
     "from aiflows.workers import run_dispatch_worker_thread"
    ]
   },
@@ -64,9 +64,9 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "#USER_JWT_PATH = \"/home/staverm/workspace/coflows-dev/coflows/jwts.txt\"\n",
-    "#user_jwt = open(USER_JWT_PATH).readline().strip()\n",
-    "#cl = CoLink(\"http://127.0.0.1:2021\", user_jwt)"
+    "# USER_JWT_PATH = \"/home/staverm/workspace/coflows-dev/coflows/jwts.txt\"\n",
+    "# user_jwt = open(USER_JWT_PATH).readline().strip()\n",
+    "# cl = CoLink(\"http://127.0.0.1:2021\", user_jwt)"
    ]
   },
   {
@@ -76,7 +76,7 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "cl = coflows_utils.start_colink_server()"
+    "cl = colink_utils.start_colink_server()"
    ]
   },
   {
@@ -260,8 +260,8 @@
       "\n",
       "~~~ Dispatch task ~~~\n",
       "flow_type: ReverseNumberSequentialFlow_served\n",
-      "flow_id: 750745d8-6df4-45b5-88c9-e8276fc56bf5\n",
-      "message_ids: ['4e2fd72f-e5fe-407e-b76c-dcd543c6395c']\n",
+      "flow_id: 7dc03caf-caad-44e9-bbcc-6a285646d62f\n",
+      "message_ids: ['5a5ef3f4-5b5c-4072-a8c5-b3c4a87b845e']\n",
       "\n",
       "Called ReverseNumberSequential\n",
       "\n"
@@ -286,16 +286,16 @@
       "\n",
       "~~~ Dispatch task ~~~\n",
       "flow_type: ReverseNumberAtomicFlow_served\n",
-      "flow_id: fd50460f-d6b5-403c-b454-5a16e608d055\n",
-      "message_ids: ['d70bd97e-ecbe-4edf-9f83-56e2b54be205']\n",
+      "flow_id: b49a93ac-bb85-495a-a56d-ec8baccadb38\n",
+      "message_ids: ['a1dc523f-046a-4596-8de7-cb800dabd8c5']\n",
       "\n",
       "Called ReverseNumberAtomic\n",
       "\n",
       "\n",
       "~~~ Dispatch task ~~~\n",
       "flow_type: ReverseNumberAtomicFlow_served\n",
-      "flow_id: 8f0411b8-eaed-4d11-9b80-fb90d012a2df\n",
-      "message_ids: ['b24b0de0-0340-4603-a537-4d8fac28c9ea']\n",
+      "flow_id: d677e1e3-1265-432c-af45-d5a758d577b1\n",
+      "message_ids: ['ba5b30e3-5e8a-437d-adaf-633db5c34851']\n",
       "\n",
       "Called ReverseNumberAtomic\n",
       "\n"
@@ -307,8 +307,16 @@
    ]
   },
   {
+   "cell_type": "markdown",
+   "id": "eda689d4-2775-41d7-9d3d-1cc528d43447",
+   "metadata": {},
+   "source": [
+    "# Get flow instance"
+   ]
+  },
+  {
    "cell_type": "code",
-   "execution_count": 12,
+   "execution_count": 11,
    "id": "56bf670c-3639-4ed3-bf6b-21b9fbd63015",
    "metadata": {},
    "outputs": [
@@ -316,9 +324,9 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "Mounted fd50460f-d6b5-403c-b454-5a16e608d055 at flows:ReverseNumberAtomicFlow_served:mounts:local:fd50460f-d6b5-403c-b454-5a16e608d055\n",
-      "Mounted 8f0411b8-eaed-4d11-9b80-fb90d012a2df at flows:ReverseNumberAtomicFlow_served:mounts:local:8f0411b8-eaed-4d11-9b80-fb90d012a2df\n",
-      "Mounted 750745d8-6df4-45b5-88c9-e8276fc56bf5 at flows:ReverseNumberSequentialFlow_served:mounts:local:750745d8-6df4-45b5-88c9-e8276fc56bf5\n"
+      "Mounted b49a93ac-bb85-495a-a56d-ec8baccadb38 at flows:ReverseNumberAtomicFlow_served:mounts:local:b49a93ac-bb85-495a-a56d-ec8baccadb38\n",
+      "Mounted d677e1e3-1265-432c-af45-d5a758d577b1 at flows:ReverseNumberAtomicFlow_served:mounts:local:d677e1e3-1265-432c-af45-d5a758d577b1\n",
+      "Mounted 7dc03caf-caad-44e9-bbcc-6a285646d62f at flows:ReverseNumberSequentialFlow_served:mounts:local:7dc03caf-caad-44e9-bbcc-6a285646d62f\n"
      ]
     }
    ],
@@ -335,7 +343,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 13,
+   "execution_count": 12,
    "id": "ab237430-b224-4ff3-a020-5f4f24bf8bec",
    "metadata": {},
    "outputs": [
@@ -359,7 +367,7 @@
        "{'output_number': 81}"
       ]
      },
-     "execution_count": 13,
+     "execution_count": 12,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -377,6 +385,261 @@
     ")\n",
     "\n",
     "flow.ask(input_message).get_data()"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "e4492c0d-f23a-4055-91e5-0bbb2ae12d50",
+   "metadata": {},
+   "source": [
+    "# Unserve flow, delete instances"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 13,
+   "id": "26f9a6d0-5188-444d-87cf-7d1fce214364",
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      " ReverseNumberSequentialFlow_served/\n",
+      "   serve_mode\n",
+      "   default_config\n",
+      "   default_dispatch_point\n",
+      "   init\n",
+      "   mounts/\n",
+      "     local/\n",
+      "       7dc03caf-caad-44e9-bbcc-6a285646d62f/\n",
+      "         config_overrides\n",
+      "         state\n",
+      "         init\n",
+      " ReverseNumberAtomicFlow_served/\n",
+      "   default_dispatch_point\n",
+      "   mounts/\n",
+      "     local/\n",
+      "       b49a93ac-bb85-495a-a56d-ec8baccadb38/\n",
+      "         config_overrides\n",
+      "         state\n",
+      "         init\n",
+      "       d677e1e3-1265-432c-af45-d5a758d577b1/\n",
+      "         config_overrides\n",
+      "         state\n",
+      "         init\n",
+      "   init\n",
+      "   default_config\n",
+      "   serve_mode\n",
+      "\n",
+      "Live flow instances:\n",
+      " 7dc03caf-caad-44e9-bbcc-6a285646d62f\n",
+      " b49a93ac-bb85-495a-a56d-ec8baccadb38\n",
+      " d677e1e3-1265-432c-af45-d5a758d577b1\n"
+     ]
+    }
+   ],
+   "source": [
+    "def status():\n",
+    "    colink_utils.print_served_flows(cl)\n",
+    "    print(\"\\nLive flow instances:\")\n",
+    "    colink_utils.print_flow_instances(cl)\n",
+    "status()"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 14,
+   "id": "b17a6793-5875-4fa3-8a3d-7537377bf838",
+   "metadata": {
+    "scrolled": true
+   },
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "ReverseNumberAtomicFlow_served has been unserved.\n"
+     ]
+    }
+   ],
+   "source": [
+    "serve_utils.unserve_flow(cl=cl, flow_type=\"ReverseNumberAtomicFlow_served\")"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 15,
+   "id": "a6a93431-9e21-4598-af52-5284d9245526",
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "False"
+      ]
+     },
+     "execution_count": 15,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "serve_utils.is_flow_served(cl, \"ReverseNumberAtomicFlow_served\")"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 16,
+   "id": "103c8cc7-2732-412b-9f08-9fa6ddda7a96",
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      " ReverseNumberSequentialFlow_served/\n",
+      "   serve_mode\n",
+      "   default_config\n",
+      "   default_dispatch_point\n",
+      "   init\n",
+      "   mounts/\n",
+      "     local/\n",
+      "       7dc03caf-caad-44e9-bbcc-6a285646d62f/\n",
+      "         config_overrides\n",
+      "         state\n",
+      "         init\n",
+      " ReverseNumberAtomicFlow_served/\n",
+      "   default_dispatch_point\n",
+      "   mounts/\n",
+      "     local/\n",
+      "       b49a93ac-bb85-495a-a56d-ec8baccadb38/\n",
+      "         config_overrides\n",
+      "         state\n",
+      "         init\n",
+      "       d677e1e3-1265-432c-af45-d5a758d577b1/\n",
+      "         config_overrides\n",
+      "         state\n",
+      "         init\n",
+      "   init\n",
+      "   default_config\n",
+      "   serve_mode\n",
+      "\n",
+      "Live flow instances:\n",
+      " 7dc03caf-caad-44e9-bbcc-6a285646d62f\n",
+      " b49a93ac-bb85-495a-a56d-ec8baccadb38\n",
+      " d677e1e3-1265-432c-af45-d5a758d577b1\n"
+     ]
+    }
+   ],
+   "source": [
+    "status()"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 17,
+   "id": "e19047db-fb0d-4ce2-a052-0a7e2962afc9",
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Deleted flow instance b49a93ac-bb85-495a-a56d-ec8baccadb38\n",
+      "Deleted flow instance d677e1e3-1265-432c-af45-d5a758d577b1\n",
+      "Stopped serving at flows:ReverseNumberAtomicFlow_served\n"
+     ]
+    }
+   ],
+   "source": [
+    "serve_utils.delete_served_flow(cl, \"ReverseNumberAtomicFlow_served\")"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 18,
+   "id": "f9e47f65-8240-4aba-a425-82cc5ef20f2f",
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      " ReverseNumberSequentialFlow_served/\n",
+      "   serve_mode\n",
+      "   default_config\n",
+      "   default_dispatch_point\n",
+      "   init\n",
+      "   mounts/\n",
+      "     local/\n",
+      "       7dc03caf-caad-44e9-bbcc-6a285646d62f/\n",
+      "         config_overrides\n",
+      "         state\n",
+      "         init\n",
+      " ReverseNumberAtomicFlow_served/\n",
+      "   mounts/\n",
+      "     local/\n",
+      "       b49a93ac-bb85-495a-a56d-ec8baccadb38/\n",
+      "       d677e1e3-1265-432c-af45-d5a758d577b1/\n",
+      "\n",
+      "Live flow instances:\n",
+      " 7dc03caf-caad-44e9-bbcc-6a285646d62f\n"
+     ]
+    }
+   ],
+   "source": [
+    "status()"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 21,
+   "id": "b24bb390-22a0-4241-9ad8-1ac56c36fe75",
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Deleted flow instance 7dc03caf-caad-44e9-bbcc-6a285646d62f.\n"
+     ]
+    }
+   ],
+   "source": [
+    "serve_utils.delete_flow_instance(cl, \"7dc03caf-caad-44e9-bbcc-6a285646d62f\")"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 22,
+   "id": "86c3717d-bf93-45c1-84ad-dcbbda9f0d95",
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      " ReverseNumberSequentialFlow_served/\n",
+      "   serve_mode\n",
+      "   default_config\n",
+      "   default_dispatch_point\n",
+      "   init\n",
+      "   mounts/\n",
+      "     local/\n",
+      "       7dc03caf-caad-44e9-bbcc-6a285646d62f/\n",
+      " ReverseNumberAtomicFlow_served/\n",
+      "   mounts/\n",
+      "     local/\n",
+      "       b49a93ac-bb85-495a-a56d-ec8baccadb38/\n",
+      "       d677e1e3-1265-432c-af45-d5a758d577b1/\n",
+      "\n",
+      "Live flow instances:\n"
+     ]
+    }
+   ],
+   "source": [
+    "status()"
    ]
   }
  ],
