Add get_instance_id() to abstract flow.

--- a/examples/coflows/ogReverseNumberNotebook.ipynb
+++ b/examples/coflows/ogReverseNumberNotebook.ipynb
@@ -227,6 +227,7 @@
     "    default_config=reverse_number_atomic_default_config,\n",
     "    default_state=None,\n",
     "    default_dispatch_point=\"coflows_dispatch\",\n",
+    "    serve_mode=\"statefull\",\n",
     ")\n",
     "serve_utils.serve_flow(\n",
     "    cl=cl,\n",
@@ -234,7 +235,7 @@
     "    default_config=reverse_number_sequential_default_config,\n",
     "    default_state=None,\n",
     "    default_dispatch_point=\"coflows_dispatch\",\n",
-    "    # serve_mode=\"statefull\" \"stateless\" \"singleton\"\n",
+    "    serve_mode=\"statefull\",\n",
     ")"
    ]
   },
@@ -260,8 +261,8 @@
       "\n",
       "~~~ Dispatch task ~~~\n",
       "flow_type: ReverseNumberSequentialFlow_served\n",
-      "flow_id: 7dc03caf-caad-44e9-bbcc-6a285646d62f\n",
-      "message_ids: ['5a5ef3f4-5b5c-4072-a8c5-b3c4a87b845e']\n",
+      "flow_id: 882b3caf-e425-4218-98ad-239542f83acf\n",
+      "message_ids: ['de491e76-b3ae-468c-9314-cea0a04598c5']\n",
       "\n",
       "Called ReverseNumberSequential\n",
       "\n"
@@ -286,16 +287,16 @@
       "\n",
       "~~~ Dispatch task ~~~\n",
       "flow_type: ReverseNumberAtomicFlow_served\n",
-      "flow_id: b49a93ac-bb85-495a-a56d-ec8baccadb38\n",
-      "message_ids: ['a1dc523f-046a-4596-8de7-cb800dabd8c5']\n",
+      "flow_id: dbb911c8-e3f2-4441-9f43-5b899905b150\n",
+      "message_ids: ['876ba971-520e-4347-b096-0dfeecb6c944']\n",
       "\n",
       "Called ReverseNumberAtomic\n",
       "\n",
       "\n",
       "~~~ Dispatch task ~~~\n",
       "flow_type: ReverseNumberAtomicFlow_served\n",
-      "flow_id: d677e1e3-1265-432c-af45-d5a758d577b1\n",
-      "message_ids: ['ba5b30e3-5e8a-437d-adaf-633db5c34851']\n",
+      "flow_id: f9af6ba5-b5b8-4b78-a93c-f148b665f2bd\n",
+      "message_ids: ['d26e9f48-d549-454f-9841-a5422bbf8502']\n",
       "\n",
       "Called ReverseNumberAtomic\n",
       "\n"
@@ -324,9 +325,9 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "Mounted b49a93ac-bb85-495a-a56d-ec8baccadb38 at flows:ReverseNumberAtomicFlow_served:mounts:local:b49a93ac-bb85-495a-a56d-ec8baccadb38\n",
-      "Mounted d677e1e3-1265-432c-af45-d5a758d577b1 at flows:ReverseNumberAtomicFlow_served:mounts:local:d677e1e3-1265-432c-af45-d5a758d577b1\n",
-      "Mounted 7dc03caf-caad-44e9-bbcc-6a285646d62f at flows:ReverseNumberSequentialFlow_served:mounts:local:7dc03caf-caad-44e9-bbcc-6a285646d62f\n"
+      "Mounted dbb911c8-e3f2-4441-9f43-5b899905b150 at flows:ReverseNumberAtomicFlow_served:mounts:local:dbb911c8-e3f2-4441-9f43-5b899905b150\n",
+      "Mounted f9af6ba5-b5b8-4b78-a93c-f148b665f2bd at flows:ReverseNumberAtomicFlow_served:mounts:local:f9af6ba5-b5b8-4b78-a93c-f148b665f2bd\n",
+      "Mounted 882b3caf-e425-4218-98ad-239542f83acf at flows:ReverseNumberSequentialFlow_served:mounts:local:882b3caf-e425-4218-98ad-239542f83acf\n"
      ]
     }
    ],
@@ -405,37 +406,37 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
+      " ReverseNumberAtomicFlow_served/\n",
+      "   init\n",
+      "   serve_mode\n",
+      "   default_dispatch_point\n",
+      "   default_config\n",
+      "   mounts/\n",
+      "     local/\n",
+      "       dbb911c8-e3f2-4441-9f43-5b899905b150/\n",
+      "         state\n",
+      "         config_overrides\n",
+      "         init\n",
+      "       f9af6ba5-b5b8-4b78-a93c-f148b665f2bd/\n",
+      "         init\n",
+      "         config_overrides\n",
+      "         state\n",
       " ReverseNumberSequentialFlow_served/\n",
       "   serve_mode\n",
       "   default_config\n",
-      "   default_dispatch_point\n",
       "   init\n",
-      "   mounts/\n",
-      "     local/\n",
-      "       7dc03caf-caad-44e9-bbcc-6a285646d62f/\n",
-      "         config_overrides\n",
-      "         state\n",
-      "         init\n",
-      " ReverseNumberAtomicFlow_served/\n",
       "   default_dispatch_point\n",
       "   mounts/\n",
       "     local/\n",
-      "       b49a93ac-bb85-495a-a56d-ec8baccadb38/\n",
+      "       882b3caf-e425-4218-98ad-239542f83acf/\n",
       "         config_overrides\n",
       "         state\n",
       "         init\n",
-      "       d677e1e3-1265-432c-af45-d5a758d577b1/\n",
-      "         config_overrides\n",
-      "         state\n",
-      "         init\n",
-      "   init\n",
-      "   default_config\n",
-      "   serve_mode\n",
       "\n",
       "Live flow instances:\n",
-      " 7dc03caf-caad-44e9-bbcc-6a285646d62f\n",
-      " b49a93ac-bb85-495a-a56d-ec8baccadb38\n",
-      " d677e1e3-1265-432c-af45-d5a758d577b1\n"
+      " dbb911c8-e3f2-4441-9f43-5b899905b150\n",
+      " f9af6ba5-b5b8-4b78-a93c-f148b665f2bd\n",
+      " 882b3caf-e425-4218-98ad-239542f83acf\n"
      ]
     }
    ],
@@ -498,37 +499,37 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
+      " ReverseNumberAtomicFlow_served/\n",
+      "   init\n",
+      "   serve_mode\n",
+      "   default_dispatch_point\n",
+      "   default_config\n",
+      "   mounts/\n",
+      "     local/\n",
+      "       dbb911c8-e3f2-4441-9f43-5b899905b150/\n",
+      "         state\n",
+      "         config_overrides\n",
+      "         init\n",
+      "       f9af6ba5-b5b8-4b78-a93c-f148b665f2bd/\n",
+      "         init\n",
+      "         config_overrides\n",
+      "         state\n",
       " ReverseNumberSequentialFlow_served/\n",
       "   serve_mode\n",
       "   default_config\n",
-      "   default_dispatch_point\n",
       "   init\n",
-      "   mounts/\n",
-      "     local/\n",
-      "       7dc03caf-caad-44e9-bbcc-6a285646d62f/\n",
-      "         config_overrides\n",
-      "         state\n",
-      "         init\n",
-      " ReverseNumberAtomicFlow_served/\n",
       "   default_dispatch_point\n",
       "   mounts/\n",
       "     local/\n",
-      "       b49a93ac-bb85-495a-a56d-ec8baccadb38/\n",
+      "       882b3caf-e425-4218-98ad-239542f83acf/\n",
       "         config_overrides\n",
       "         state\n",
       "         init\n",
-      "       d677e1e3-1265-432c-af45-d5a758d577b1/\n",
-      "         config_overrides\n",
-      "         state\n",
-      "         init\n",
-      "   init\n",
-      "   default_config\n",
-      "   serve_mode\n",
       "\n",
       "Live flow instances:\n",
-      " 7dc03caf-caad-44e9-bbcc-6a285646d62f\n",
-      " b49a93ac-bb85-495a-a56d-ec8baccadb38\n",
-      " d677e1e3-1265-432c-af45-d5a758d577b1\n"
+      " dbb911c8-e3f2-4441-9f43-5b899905b150\n",
+      " f9af6ba5-b5b8-4b78-a93c-f148b665f2bd\n",
+      " 882b3caf-e425-4218-98ad-239542f83acf\n"
      ]
     }
    ],
@@ -546,8 +547,8 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "Deleted flow instance b49a93ac-bb85-495a-a56d-ec8baccadb38\n",
-      "Deleted flow instance d677e1e3-1265-432c-af45-d5a758d577b1\n",
+      "Deleted flow instance dbb911c8-e3f2-4441-9f43-5b899905b150\n",
+      "Deleted flow instance f9af6ba5-b5b8-4b78-a93c-f148b665f2bd\n",
       "Stopped serving at flows:ReverseNumberAtomicFlow_served\n"
      ]
     }
@@ -566,25 +567,25 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      " ReverseNumberSequentialFlow_served/\n",
-      "   serve_mode\n",
-      "   default_config\n",
-      "   default_dispatch_point\n",
-      "   init\n",
-      "   mounts/\n",
-      "     local/\n",
-      "       7dc03caf-caad-44e9-bbcc-6a285646d62f/\n",
-      "         config_overrides\n",
-      "         state\n",
-      "         init\n",
       " ReverseNumberAtomicFlow_served/\n",
       "   mounts/\n",
       "     local/\n",
-      "       b49a93ac-bb85-495a-a56d-ec8baccadb38/\n",
-      "       d677e1e3-1265-432c-af45-d5a758d577b1/\n",
+      "       dbb911c8-e3f2-4441-9f43-5b899905b150/\n",
+      "       f9af6ba5-b5b8-4b78-a93c-f148b665f2bd/\n",
+      " ReverseNumberSequentialFlow_served/\n",
+      "   serve_mode\n",
+      "   default_config\n",
+      "   init\n",
+      "   default_dispatch_point\n",
+      "   mounts/\n",
+      "     local/\n",
+      "       882b3caf-e425-4218-98ad-239542f83acf/\n",
+      "         config_overrides\n",
+      "         state\n",
+      "         init\n",
       "\n",
       "Live flow instances:\n",
-      " 7dc03caf-caad-44e9-bbcc-6a285646d62f\n"
+      " 882b3caf-e425-4218-98ad-239542f83acf\n"
      ]
     }
    ],
@@ -594,7 +595,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 21,
+   "execution_count": 19,
    "id": "b24bb390-22a0-4241-9ad8-1ac56c36fe75",
    "metadata": {},
    "outputs": [
@@ -602,17 +603,17 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "Deleted flow instance 7dc03caf-caad-44e9-bbcc-6a285646d62f.\n"
+      "Metadata for 7dc03caf-caad-44e9-bbcc-6a285646d62f doesn't exist.\n"
      ]
     }
    ],
    "source": [
-    "serve_utils.delete_flow_instance(cl, \"7dc03caf-caad-44e9-bbcc-6a285646d62f\")"
+    "serve_utils.delete_flow_instance(cl, flow.)"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 22,
+   "execution_count": 20,
    "id": "86c3717d-bf93-45c1-84ad-dcbbda9f0d95",
    "metadata": {},
    "outputs": [
@@ -620,21 +621,25 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      " ReverseNumberSequentialFlow_served/\n",
-      "   serve_mode\n",
-      "   default_config\n",
-      "   default_dispatch_point\n",
-      "   init\n",
-      "   mounts/\n",
-      "     local/\n",
-      "       7dc03caf-caad-44e9-bbcc-6a285646d62f/\n",
       " ReverseNumberAtomicFlow_served/\n",
       "   mounts/\n",
       "     local/\n",
-      "       b49a93ac-bb85-495a-a56d-ec8baccadb38/\n",
-      "       d677e1e3-1265-432c-af45-d5a758d577b1/\n",
+      "       dbb911c8-e3f2-4441-9f43-5b899905b150/\n",
+      "       f9af6ba5-b5b8-4b78-a93c-f148b665f2bd/\n",
+      " ReverseNumberSequentialFlow_served/\n",
+      "   serve_mode\n",
+      "   default_config\n",
+      "   init\n",
+      "   default_dispatch_point\n",
+      "   mounts/\n",
+      "     local/\n",
+      "       882b3caf-e425-4218-98ad-239542f83acf/\n",
+      "         config_overrides\n",
+      "         state\n",
+      "         init\n",
       "\n",
-      "Live flow instances:\n"
+      "Live flow instances:\n",
+      " 882b3caf-e425-4218-98ad-239542f83acf\n"
      ]
     }
    ],
