Update ReverseNumber notebook.

--- a/examples/coflows/ogReverseNumberNotebook.ipynb
+++ b/examples/coflows/ogReverseNumberNotebook.ipynb
@@ -595,7 +595,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 19,
+   "execution_count": 21,
    "id": "b24bb390-22a0-4241-9ad8-1ac56c36fe75",
    "metadata": {},
    "outputs": [
@@ -603,17 +603,17 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "Metadata for 7dc03caf-caad-44e9-bbcc-6a285646d62f doesn't exist.\n"
+      "Deleted flow instance 882b3caf-e425-4218-98ad-239542f83acf.\n"
      ]
     }
    ],
    "source": [
-    "serve_utils.delete_flow_instance(cl, flow.)"
+    "serve_utils.delete_flow_instance(cl, flow.get_instance_id())"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 20,
+   "execution_count": 22,
    "id": "86c3717d-bf93-45c1-84ad-dcbbda9f0d95",
    "metadata": {},
    "outputs": [
@@ -634,12 +634,8 @@
       "   mounts/\n",
       "     local/\n",
       "       882b3caf-e425-4218-98ad-239542f83acf/\n",
-      "         config_overrides\n",
-      "         state\n",
-      "         init\n",
       "\n",
-      "Live flow instances:\n",
-      " 882b3caf-e425-4218-98ad-239542f83acf\n"
+      "Live flow instances:\n"
      ]
     }
    ],
